--- a/templates/base/head.html
+++ b/templates/base/head.html
@@ -30,4 +30,4 @@
 			</div>
 		</div>
 		<div class="content">
-			{{if .HasScope}}<center><div class="scope">{{.SiteScope}}{{if .DevMode}} [DEV]{{end}}</div></center>{{end}}
+			{{if .HasScope}}<center><div class="scope">{{.SiteScope}}{{if .DevMode}} &middot; DEV{{end}}</div></center>{{end}}
