--- a/templates/courses.html
+++ b/templates/courses.html
@@ -2,7 +2,7 @@
 {{template "partials/flash" .}}
 <h1>{{.Title}}</h1>
 
-<div class="card-grid">
+<div class="card-grid gridFullWidth">
 	{{ range .Courses }}
 	<div class="card">
 		<h3 class="noTopMargin">{{.Name}}</h3>
