--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
   
   <div class="card">
     <p>Send an anonymous direct complaint</p>
-    <p><a href="/complaints" id="complaint-btn" class="btn btn-danger">Send complaint</a></p>
+    <p><a href="/complaints" class="btn btn-danger">Send complaint</a></p>
   </div>
   {{ range .Config.ClassReps }}
   <div class="card">
