--- a/templates/lecturers.html
+++ b/templates/lecturers.html
@@ -5,7 +5,7 @@
 <div class="card-grid gridFullWidth">
   {{ range .Lecturers }}
   <div class="card">
-    <h3 class="noTopMargin">{{.Name}}</h3>
+    <h3 class="noTopMargin noBottomMargin">{{.Name}}</h3>
     <a href="{{.Email}}">{{.Email}}</a>
     <p>{{.Office}}</p>
     <p><i>Last Updated: {{.Updated}}</i></p>
