--- a/templates/preview.html
+++ b/templates/preview.html
@@ -111,40 +111,42 @@ But he later added:
 </a>
 
 <h2>Tickets</h2>
-<a class="card ticketCard" href="">
-  <div class="tickets-grid-container">
-    <div class="grid-child upvotes">
-      <div>
-        24
+<div class="card-grid-vertical">
+  <a class="card ticketCard" href="">
+    <div class="tickets-grid-container">
+      <div class="grid-child upvotes">
+        <div>
+          24
+        </div>
+      </div>
+      <div class="grid-child">
+        <div class="ticket-title">
+          Issue Regarding Water
+        </div>
+        <div class="meta">
+          <span class="tag">General</span> &MediumSpace;&middot; 7 days ago &middot; 12 comments
+        </div>
       </div>
     </div>
-    <div class="grid-child">
-      <div class="ticket-title">
-        Issue Regarding Water
+  </a>
+  <a class="card ticketCard" href="">
+    <div class="tickets-grid-container">
+      <div class="grid-child upvotes">
+        <div>
+          17
+        </div>
       </div>
-      <div class="meta">
-        <span class="tag">General</span> &MediumSpace;&middot; 7 days ago &middot; 12 comments
-      </div>
-    </div>
-  </div>
-</a>
-<a class="card ticketCard" href="">
-  <div class="tickets-grid-container">
-    <div class="grid-child upvotes">
-      <div>
-        17
-      </div>
-    </div>
-    <div class="grid-child">
-      <div class="ticket-title">
-        Something That Will Affect Everyone
-      </div>
-      <div class="meta">
-        <span class="tag">F20PA</span> &MediumSpace;&middot; 3 days ago &middot; 4 comments
+      <div class="grid-child">
+        <div class="ticket-title">
+          Something That Will Affect Everyone
+        </div>
+        <div class="meta">
+          <span class="tag">F20PA</span> &MediumSpace;&middot; 3 days ago &middot; 4 comments
+        </div>
       </div>
     </div>
-  </div>
-</a>
+  </a>
+</div>
 
 <h2>Comments</h2>
 
@@ -167,33 +169,35 @@ But he later added:
 
 <h2>Alert Boxes</h2>
 
-<div class="card alert-grey">
-  <p class="alert-title">Alert</p>
-  <p class="noBottomMargin">
-    Officia illum et cumque. Nam ad assumenda rerum velit iure labore.
-  </p>
-  <a href="" class="btn">Read more</a>
-</div>
-<br class="mobile">
-<div class="card alert-green">
-  <p class="alert-title">Alert</p>
-  <p class="noBottomMargin">
-    Officia illum et cumque. Nam ad assumenda rerum velit iure labore.
-  </p>
-</div>
-<br class="mobile">
-<div class="card alert-yellow">
-  <p class="alert-title">Alert</p>
-  <p class="noBottomMargin">
-    Officia illum et cumque. Nam ad assumenda rerum velit iure labore.
-  </p>
-</div>
-<br class="mobile">
-<div class="alert alert-red">
-  <p class="alert-title">Alert</p>
-  <p class="noBottomMargin">
-    Officia illum et cumque. Nam ad assumenda rerum velit iure labore.
-  </p>
+<div class="card-grid-vertical">
+  <div class="card alert-grey">
+    <p class="alert-title">Alert</p>
+    <p class="noBottomMargin">
+      Officia illum et cumque. Nam ad assumenda rerum velit iure labore.
+    </p>
+    <a href="" class="btn">Read more</a>
+  </div>
+  <div class="card alert-green">
+    <p class="alert-title">Alert</p>
+    <p class="noBottomMargin">
+      Officia illum et cumque. Nam ad assumenda rerum velit iure labore.
+    </p>
+    <a href="" class="btn">Read more</a>
+  </div>
+  <div class="card alert-yellow">
+    <p class="alert-title">Alert</p>
+    <p class="noBottomMargin">
+      Officia illum et cumque. Nam ad assumenda rerum velit iure labore.
+    </p>
+    <a href="" class="btn">Read more</a>
+  </div>
+  <div class="card alert-red">
+    <p class="alert-title">Alert</p>
+    <p class="noBottomMargin">
+      Officia illum et cumque. Nam ad assumenda rerum velit iure labore.
+    </p>
+    <a href="" class="btn">Read more</a>
+  </div>
 </div>
 
 {{template "base/footer" .}}
