--- a/templates/ticket_card.html
+++ b/templates/ticket_card.html
@@ -1,4 +1,4 @@
-<a class="card ticketCard" href="/tickets/{{.TicketID}}">
+<a class="card card-score" href="/tickets/{{.TicketID}}">
 	<div class="tickets-grid-container">
 		<div class="grid-child upvotes">
 			<div>
@@ -6,7 +6,7 @@
 			</div>
 		</div>
 		<div class="grid-child">
-			<div class="ticket-title">
+			<div class="card-score-title">
 				{{.Title}}
 			</div>
 			<div class="meta">
