--- a/templates/announcements.html
+++ b/templates/announcements.html
@@ -8,7 +8,7 @@
 
 <div class="card-grid-vertical">
   {{range .Announcements}}
-  <a class="card ticketCard" href="/a/{{.AnnouncementID}}">
+  <a class="card" href="/a/{{.AnnouncementID}}">
     <div class="announcements-grid-container">
       <div class="grid-child">
         <div>
