--- a/templates/preview.html
+++ b/templates/preview.html
@@ -92,7 +92,7 @@ But he later added:
 </ol>
 
 <h2>Announcements</h2>
-<a class="card ticketCard" href="">
+<a class="card" href="">
   <div class="announcements-grid-container">
     <div class="grid-child">
       <div>
@@ -112,8 +112,8 @@ But he later added:
 
 <h2>Tickets</h2>
 <div class="card-grid-vertical">
-  <a class="card ticketCard" href="">
-    <div class="tickets-grid-container">
+  <a class="card" href="">
+    <div class="score-grid-container">
       <div class="grid-child upvotes">
         <div>
           24
@@ -129,8 +129,8 @@ But he later added:
       </div>
     </div>
   </a>
-  <a class="card ticketCard" href="">
-    <div class="tickets-grid-container">
+  <a class="card" href="">
+    <div class="score-grid-container">
       <div class="grid-child upvotes">
         <div>
           17
