--- a/templates/lecturers.html
+++ b/templates/lecturers.html
@@ -2,7 +2,7 @@
 {{template "partials/flash" .}}
 <h1>{{.Title}}</h1>
 
-<div class="card-grid gridFullWidth">
+<div class="card-grid grid-wide">
   {{ range .Lecturers }}
   <div class="card">
     <h3 class="noTopMargin noBottomMargin">{{.Name}}</h3>
