--- a/templates/ticket_card.html
+++ b/templates/ticket_card.html
@@ -1,4 +1,4 @@
-<a class="card" href="/tickets/{{.TicketID}}">
+<a class="card" id="ticket-card" href="/tickets/{{.TicketID}}">
 	<div class="score-grid-container">
 		<div class="grid-child upvotes">
 			<div>{{Len .Voters}}</div>
