Fixed flash error and added text to login page

--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,7 @@
 {{template "base/head" .}}
 {{template "partials/flash" .}}
 <h1>Login</h1>
-<br>
+<p>This login is for class representatives and school officers only.</p>
 <form method="post">
   <div class="col-5">
     <div class="form-group">
