--- a/templates/partials/flash.html
+++ b/templates/partials/flash.html
@@ -1,12 +1,12 @@
-{{if .Flash.ErrorMsg}}<div class="alert alert-red">
-<p class="alert-title noBottomMargin">Error!</p>
+{{if .Flash.ErrorMsg}}<div class="card alert-red">
+<h2 class="noTopMargin noBottomMargin">Error!</h2>
 <p class="noBottomMargin">{{.Flash.ErrorMsg}}</p></div>{{end}}
-{{if .Flash.WarningMsg}}<div class="alert alert-yellow">
-<p class="alert-title noBottomMargin">Warning!</p>
+{{if .Flash.WarningMsg}}<div class="card alert-yellow">
+<h2 class="noTopMargin noBottomMargin">Warning!</h2>
 <p class="noBottomMargin">{{.Flash.WarningMsg}}</p></div>{{end}}
-{{if .Flash.InfoMsg}}<div class="alert alert-grey">
-<p class="alert-title noBottomMargin">Info</p>
+{{if .Flash.InfoMsg}}<div class="card alert-grey">
+<h2 class="noTopMargin noBottomMargin">Info</h2>
 <p class="noBottomMargin">{{.Flash.InfoMsg}}</p></div>{{end}}
-{{if .Flash.SuccessMsg}}<div class="alert alert-green">
-<p class="alert-title noBottomMargin">Success</p>
+{{if .Flash.SuccessMsg}}<div class="card alert-green">
+<h2 class="noTopMargin noBottomMargin">Success</h2>
 <p class="noBottomMargin">{{.Flash.SuccessMsg}}</p></div>{{end}}
