Updated privacy policy

--- a/templates/privacy.html
+++ b/templates/privacy.html
@@ -16,7 +16,7 @@ order to roughly identify a user, allowing us to keep track of upvotes without
 de-anonymising users. This hash is not linked with your session.</p>
 
 <p>On the <a href="/complaints">complaints page</a>, users may leave an email
-address if further correspondence is required. Complaints could not be linked
+address if further correspondence is required. Complaints can not be linked
 with the session, or any post under the ticketing system.</p>
 
 <p>We do log requests as you browse the services and store it for 30 days:</p>
@@ -51,5 +51,5 @@ parties.</p>
 <p>We, the current class representatives, reserve the right to make any changes to this privacy policy. Notice will be
   given as an alert on the <a href="/">homepage</a>.</p>
 
-<p><i>Updated: 27/07/20</i></p>
+<p><i>Updated: 10/08/20</i></p>
 {{template "base/footer" .}}
