Allow posting as Admin.

--- a/templates/ticket.html
+++ b/templates/ticket.html
@@ -34,6 +34,9 @@
 		<div class="form-group">
 			<textarea class="form-item" name="text" cols="40" rows="4" required="1" placeholder="Plain text only"></textarea>
 		</div>
+    {{if .IsAdmin}}
+    <div class="form-group"><input type="checkbox" id="as_admin" name="as_admin" />
+      <label for="as_admin">Post as admin?</label></div>{{end}}
 		<input type="hidden" name="_csrf" value="{{.csrf_token}}">
 		<button type="submit" class="btn">Comment</button>
 	</div>
@@ -45,7 +48,7 @@
 	{{range .Ticket.Comments}}
 	<div class="comment">
 		<span id="c-{{.CommentID}}" class="commentInfo">
-			{{.PosterID}} &middot; {{CalcDurationShort .CreatedUnix}} ago
+      {{.PosterID}} {{ if .IsAdmin}}<span class="badge">Admin</span> {{end}}&middot; {{CalcDurationShort .CreatedUnix}} ago
 			{{if $.IsAdmin }}<form method="post" action="/tickets/{{$.Ticket.TicketID}}/del/{{.CommentID}}" class="lineform">
 				<input type="hidden" name="_csrf" value="{{$.csrf_token}}">
 				<button type="submit" class="btn upvote commentBtn">Delete</button>
